--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "24.7.1",
     "jest-styled-components": "^6.3.1",
     "nodemon": "^1.18.9",
+    "react-hooks-testing-library": "^0.5.0",
     "typescript": "^3.2.2"
   },
   "dependencies": {
