--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest-styled-components": "^6.3.1",
     "nodemon": "^1.18.9",
     "react-hooks-testing-library": "^0.5.0",
+    "react-testing-library": "^7.0.0",
     "typescript": "^3.2.2"
   },
   "dependencies": {
